# auth-sso

./: .dockerignore  .env.example  .gitignore  .orig  AGENTS.md  CHANGELOG.md  CLAUDE.md  DESIGN.md  DOCKER.md  PRD-auth-sso-v1.0.md  README.md  TODOS.md  docker-compose.e2e.yml  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  drizzle.base.ts  eslint.base.mjs  idp_logs.txt  next.base.ts  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json  vitest.base.ts  vitest.config.ts  冻结评审版-总方案-auth-sso-v1.0.md  开发周期清单-auth-sso-v1.0.md  技术探针-Better-Auth-OIDC-Provider-v1.0.md  技术选型-auth-sso-v1.0.md  接口清单-字段级契约-auth-sso-v1.0.md  数据库表结构草案-auth-sso-v1.0.md  研发实施清单-里程碑-auth-sso-v1.0.md  评审阅读顺序-auth-sso-v1.0.md  项目排期与任务清单-auth-sso-v1.0.md
.antigravitycli/: 8f05b2f6-cba2-430c-bb75-a2947984f87b.json
.github/workflows/: access-log-partitions.yml  main.yml  pr.yml  release-validation.yml
.kilo/plans/: 1783057984443-docker-config-zero-trust-docs.md  1783064576913-unify-config-and-router.md  1784015368125-deep-function-audit.md  2026-07-16-gateway-auth-unification.md
.vercel_bak_final_fix/: project.json
apps/customer-graph/: .env.example  .env.production.example  next.config.ts  package.json  tsconfig.json  tsconfig.tsbuildinfo  vercel.json
apps/demo-app/: .env.example  .gitignore  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  vercel.json
apps/gateway/: Cargo.toml  Dockerfile  gateway.docker.toml  gateway.e2e.toml  gateway.toml
apps/gateway/benches/: cookie_bench.rs  jwks_cache_bench.rs  jwt_payload_bench.rs  path_classify_bench.rs  rate_limit_bench.rs
apps/gateway/src/: app_context.rs  auth.rs  auth_filter.rs  authenticate.rs  claims.rs  config.rs  cookie.rs  gateway.rs  http.rs  http_ext.rs  jwks.rs  lib.rs  logging.rs  main.rs  metrics.rs  oauth.rs  path_matcher.rs  rate_limit_filter.rs  rate_limiter.rs  redirect.rs  redis.rs  router.rs
apps/gateway/src/auth/: mod.rs  refresh.rs  tests.rs  verify.rs
apps/gateway/src/jwks/: tests.rs
apps/idp/: .env.example  .env.prod.example  .env.production.example  .gitignore  Dockerfile  auth-schema.ts  check-db.ts  package.json  tsconfig.json  vercel.json  vitest.config.ts  vitest.setup.ts
apps/portal/: .env.example  .env.prod.example  .env.production.example  .gitignore  Dockerfile  README.md  drizzle.config.ts  eslint.config.mjs  next.config.ts  package.json  tsc_output.txt  tsconfig.json  vercel.json  vitest.config.ts  vitest.globalSetup.ts  vitest.server-only.mock.ts  vitest.setup.ts
conductor/: 2026-04-03-001-feat-rbac-data-scope-refinement-plan.md  2026-04-07-001-feat-rbac-data-scope-and-auth-security-hardening-plan-REVISION.md  2026-04-08-001-redeploy-all-apps-plan.md  2026-04-14-001-consolidate-v1-docs.md  2026-04-17-001-align-req-design-code-test.md  2026-04-22-001-rbac-resources-ui-test-skill.md  2026-04-24-001-execute-ui-tests.md  2026-04-24-002-fix-ui-bugs-from-report.md  2026-05-11-001-implementation-integrity-audit.md  2026-05-15-001-security-fix-plan.md  2026-05-19-001-pingora-gateway-plan.md
docker/: init-db.sql
docs/: API.md  ARCHITECTURE.md  DATABASE.md  DEPLOYMENT_SOP.md  INTEGRATION_GUIDE.md  PRD.md  PROJECT_PLAN.md  code-audit-2025-06-22.md  code-review-fixes-2025-06-17.md  deployment-checklist.md  environment-variables.md  glossary.md  portal-architecture-guidelines.md  release-sop.md  roadmap.md  rollback-plan.md  security-checklist.md  spec-alignment-audit-2026-06-25.md  spec-alignment-audit-2026-07-09.md  sso-integration-guide.md  test-cases.md  vercel-dashboard-deployment.md  vercel-deployment.md
docs/adr/: ADR-001-unified-permission-tree.md  ADR-002-role-department-binding.md  ADR-003-gateway-as-oauth-client.md  ADR-004-stateless-jwt-redis-blacklist.md  ADR-005-three-layer-security-model.md  ADR-006-jwt-minimization-authz-separation.md  ADR-007-app-self-authorization.md  ADR-008-permission-code-namespace.md  ADR-009-gateway-auth-flow-unification.md
docs/analysis/: better-auth-architecture-review.md
docs/archive/: TECH_DEBT.md
docs/audit/: 2026-07-10-code-audit.md  2026-07-13-code-audit.md  2026-07-14-code-audit.md  2026-07-14-deep-function-audit.md  2026-07-22-code-audit.md  2026-07-23-code-audit.md  2026-07-23-packages-apps-code-audit.md
docs/brainstorms/: 2026-04-08-customer-graph-visualization-requirements.md  2026-06-11-layered-verification-strategy-requirements.md  portal-ddd-architecture-requirements.md
docs/plans/: 2026-04-07-001-feat-rbac-data-scope-and-auth-security-hardening-plan.md  2026-04-08-002-feat-customer-graph-visualization-plan.md  2026-06-11-003-feat-layered-test-verification-plan.md  2026-06-25-001-feat-portal-design-polish-plan.md  2026-07-15-adr-006-007-008-implementation.md  2026-07-16-adr-009-gateway-refactor.md  2026-07-24-system-design-iteration.md  (+3 more)
scripts/: build-wasm.sh  e2e-check.sh  monitor-gateway.sh  qa-run.sh  seed-demo-client.ts  seed-test-data-uuid.sql  seed-test-data.sql  seed-v2.ts  verify-m4.sh  verify-m5.sh  verify-rbac-data-scope.ts  verify-role-data-scope-mgmt.ts  verify-user-mgmt-data-scope.ts
tests/: DEPRECATED.md  auth-security.test.js  auth.test.js  business.test.js  check-db.js  check-readiness.js  config.js  data-scope-self.test.js  data-scope.test.js  debug-auth.js  department.test.js  detailed-logic.test.js  e2e-complete-flow.test.js  package-lock.json  package.json  performance.test.js  permission.test.js  rbac-business.test.js  run-tests.sh  runner.js  security.test.js  session.test.js  smoke.test.js  sso.test.js  start-services.sh  stop-services.sh  tdd-prd-all.test.js  test-db-conn.js  test-report.json  ui-bridge-verify.js  utils.js
wasm-engine/: Cargo.toml
wasm-engine/shaders/: edge.wgsl  force.wgsl  node.wgsl
wasm-engine/src/: api.rs  lib.rs
wasm-engine/src/data/: edge.rs  graph_store.rs  mod.rs  node.rs  orderbook.rs
wasm-engine/src/interaction/: drag.rs  hit.rs  mod.rs  zoom.rs
wasm-engine/src/renderer/: buffer.rs  context.rs  instance.rs  mod.rs  pipeline.rs
wasm-engine/src/simulation/: collision.rs  force.rs  grid.rs  mod.rs  physics.rs
(+559 files in other folders)
