[package]
name = "graph-engine"
version = "0.1.0"
edition = "2021"
description = "GPU-accelerated customer relationship graph visualization engine"
authors = ["Auth-SSO Team"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# GPU rendering - 启用 wgsl feature 和 web feature (用于 WebGPU/WASM)
wgpu = { version = "29", default-features = false, features = ["webgpu", "webgl", "wgsl", "web"] }

# WASM bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "Window",
  "Document",
  "Element",
  "HtmlCanvasElement",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"

# Graph data structure
petgraph = "0.6"

# GPU data layout
bytemuck = { version = "1", features = ["derive"] }

# Utilities
console_error_panic_hook = "0.1"

[dependencies.uuid]
version = "1"
features = ["v4", "js"]

[profile.release]
opt-level = "z"          # Optimize for size
lto = true               # Link-time optimization
codegen-units = 1        # Better optimization
panic = "abort"          # Smaller panic handling
strip = true             # Strip symbols

[profile.dev]
opt-level = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals", "--enable-bulk-memory-opt", "--enable-nontrapping-float-to-int"]