[package]
name = "orderbook-engine"
version = "0.1.0"
edition = "2021"
description = "GPU-accelerated futures orderbook visualization engine"
authors = ["Auth-SSO Team"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wgpu = { version = "22", default-features = false, features = ["webgpu", "webgl", "wgsl", "web"] }

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "Window",
  "Document",
  "Element",
  "HtmlCanvasElement",
] }

serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"

bytemuck = { version = "1", features = ["derive"] }
console_error_panic_hook = "0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals", "--enable-bulk-memory-opt", "--enable-nontrapping-float-to-int"]
