[package]
name = "gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
pingora = { version = "0.8.0", features = ["openssl"] }
pingora-core = { version = "0.8.0", features = ["openssl"] }
pingora-http = "0.8.0"
pingora-load-balancing = { version = "0.8.0", features = ["openssl"] }
pingora-proxy = { version = "0.8.0", features = ["openssl"] }
pingora-runtime = "0.8.0"
openssl = { version = "0.10.81", features = ["vendored"] }

# Tracing 高性能每日滚动日志
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt", "ansi"] }
tracing-appender = "0.2.5"

# JWT 验签：ES256 JWKS 非对称验签
jsonwebtoken = "9.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

# 异步 HTTP 客户端（热路径：续签请求）+ blocking（冷启动：首次 JWKS 同步拉取）
reqwest = { version = "0.12.7", features = ["json", "rustls-tls"], default-features = false }

# 异步运行时（tokio::time::sleep + #[tokio::test]）
tokio = { version = "1.52.3", features = ["sync", "time", "rt", "macros"] }

# Redis 客户端（jti 黑名单 + 续签去重 + 分布式限流）
redis = { version = "1", features = ["aio"] }

# bb8 异步连接池（Redis 多连接复用 + 连接健康检查）
bb8 = "0.9"
bb8-redis = "0.26"

# URL 编码（callbackUrl 生成）
urlencoding = "2.1.3"

# 配置管理（TOML 文件 + 环境变量覆盖）
config = { version = "0.14.0", features = ["toml"] }

# 命令行参数解析（Clap 声明式）
clap = { version = "4.6.1", features = ["derive"] }

# Base64 编解码（裸解 JWT payload）
base64 = "0.22.1"

# 错误处理
thiserror = "2.0.18"
anyhow = "1.0.103"

