[package]
name = "gateway"
version = "0.1.0"
edition = "2024"
description = "SSO 去中心化安全网关 - 基于 Pingora + ES256 JWKS 离线验签"
license = "MIT"
repository = "https://github.com/auth-sso/auth-sso"
keywords = ["sso", "gateway", "oidc", "jwt", "pingora"]
categories = ["authentication", "web-programming::http-server"]

[dependencies]
tokio = { version = "1.52.3", features = ["time", "rt", "macros"] }

pingora-core = { version = "0.8.1", features = ["openssl"] }
pingora-http = "0.8.1"
pingora-limits = "0.8.1"
pingora-load-balancing = { version = "0.8.1", features = ["openssl"] }
pingora-proxy = { version = "0.8.1", features = ["openssl"] }

openssl = { version = "0.10.81", features = ["vendored"] }

reqwest = { version = "0.12.7", features = ["json", "rustls-tls"], default-features = false }

itoa = "1.0"
jsonwebtoken = "9.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
base64 = "0.22.1"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
getrandom = "0.4"

redis = { version = "1", features = ["aio"] }
bb8 = "0.9"
bb8-redis = "0.26"

tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt", "ansi"] }
tracing-appender = "0.2.5"

config = { version = "0.14.0", features = ["toml"] }
clap = { version = "4.6.1", features = ["derive"] }
urlencoding = "2.1.3"

thiserror = "2.0.18"
anyhow = "1.0.103"

async-trait = "0.1.89"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"], default-features = false }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = 1
strip = "debuginfo"
panic = "unwind"

[profile.dev]
opt-level = 0
debug = true

[profile.bench]
opt-level = 3
lto = "thin"
codegen-units = 1
debug = 1

[[bench]]
name = "cookie_bench"
harness = false

[[bench]]
name = "path_classify_bench"
harness = false

[[bench]]
name = "jwt_payload_bench"
harness = false

[[bench]]
name = "rate_limit_bench"
harness = false

[[bench]]
name = "jwks_cache_bench"
harness = false
